src/test/deca/context/invalid/lvalue_selection_public_not_class.deca
// Test rule (3.65) : if we try to select a field of a class but the
// selection on left side of the dot is not an object, it fails.

{
  int a = 0;
  a.x = 1;
}

